# concurrency-problems

./: .gitignore  PERFORMANCE_REPORT.md
.github/: copilot-instructions.md
dining-philosophers-semaphore/: Makefile  README.md  dining_philosophers  dining_philosophers.c  semaphore.c  semaphore.h
linkedlist/: Makefile  README.md  lock_free_list.c  lock_free_list.h  test_list  test_list.c
stream-processing/: CMakeLists.txt  README.md
stream-processing-deploy/: .env.example  Dockerfile  Makefile  OPENVINO_SETUP.md  README.md  coinbase-inference  docker-compose.yml  stream-server  test-client
stream-processing-deploy/docs/: CPP_PIPELINE.md
stream-processing-deploy/models/ibm-granitegranite-timeseries-patchtst/: README.md
stream-processing-deploy/models/openvino/: config.json  openvino_model.xml
stream-processing-deploy/scripts/: test_data_pump.py
stream-processing-deploy/src/: coinbase_bridge.cpp  coinbase_connector.cpp  coinbase_connector.h  coinbase_inference_main.cpp  coinbase_websocket.h  coinbase_ws_bridge.cpp  main.cpp  pipeline_main.cpp  test_client.cpp
stream-processing-deploy/src/pipeline/: actuator.h  coinbase_pipeline.h  feature_engineer.h  feature_types.h  inference_engine.h  sliding_window.h
stream-processing/include/: broker.h  config.h  hash.h  lock_free_queue.h  log_segment.h  message.h  object_pool.h  partition.h  thread_safe_queue.h  topic.h
stream-processing/include/network/: client.h  protocol.h  tcp_server.h
stream-processing/src/core/: broker.cpp  message.cpp  partition.cpp  topic.cpp
stream-processing/src/network/: client.cpp  protocol.cpp  tcp_server.cpp
stream-processing/src/storage/: log_segment.cpp
stream-processing/tests/: test_basic.cpp  test_broker.cpp  test_network.cpp  test_performance.cpp  test_serialization.cpp  test_storage.cpp  test_topic.cpp
